Fix Navbar weird positioning on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -42,7 +42,19 @@ body {
     /*font-family: Arial, sans-serif;*/
     color: #333;
     background-color: #CACACA;
+    font-size: clamp(0.75rem, 1.25vw, 1.5rem);
 }
+/*@media screen and (min-width: 1000px) {*/
+/*    body {*/
+/*        font-size: 1.5vw;*/
+/*    }*/
+/*}*/
+/*@media screen and (min-width: 1600px) {*/
+/*    .features-icon-desc-text {*/
+/*        !*font-size: 1vw;*!*/
+/*    }*/
+
+/*}*/
 
 a {
     text-decoration: none;
@@ -52,56 +64,67 @@ a {
 /* Header */
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color: #CACACA;
-    padding: 5px 50px;
+    /*padding: 0.5vw 50px; !* UD LR *!*/
 }
 
-header .logo img {
-    height: 64px;
+.logo img {
+    /*width: 20%;*/
+    /*max-width: 20%;*/
+    width: 7vw;
 }
 
-header nav ul {
+.nav-top-container {
     display: flex;
-    list-style-type: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    /*height: auto;*/
     width: 100%;
-    gap: 15%;
-}
+    gap: 5%;
+    /*padding: 10px 0px;*/
 
-header nav ul li a {
-    font-weight: bold;
-    color: #000;
-}
-
-header .download-btn a {
-    background-color: #1ED87E;
-    border: 1px solid #434343;
-    color: #000;
-    padding: 10px 20px;
-    border-radius: 15px;
-    font-weight: bold;
-    font-size: 32px;
-}
-
-nav {
-    /*font-family: "Bakbak One", sans-serif;*/
-    /*font-weight: 400;*/
-    font-style: normal;
-    font-size: 28px;
-    width: 60%;
-
+    font-size: 2.5vw;
     font-family: "Teko", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    /*font-style: normal;*/
+}
+@media screen and (min-width: 1000px) {
+    .nav-top-container {
+        font-size: 32px;
+    }
+
+    .logo img {
+        height: 64px;
+        width: 64px;
+    }
+}
+
+
+.nav-top-item {
+    font-weight: bold;
+    color: #000;
+
+}
+
+.download-btn {
+    background-color: #1ED87E;
+    border: 1px solid #434343;
+    color: #000;
+    padding: 1vmin 2vmin;
+
+    border-radius: 15px;
+    font-weight: bold;
 }
 
 h1 {
     font-family: "Bakbak One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 72px;
+    font-size: clamp(3rem, 6vw, 6rem);
 }
 
 .static-hero {
